# AirflowNetwork

./: CMakeLists.txt  LICENSE.txt  README.md  metadata.yml
dependencies/include/boost/: ut.hpp
include/airflownetwork/: elements.hpp  energyplus_elements.hpp  properties.hpp
resources/: test.prj
scripts/: door.py  objects.py  powerlaw.py
test/: CMakeLists.txt  afn_tests.cpp  network.hpp  opening_tests.cpp  powerlaw_tests.cpp  specified_flow_tests.cpp  two_way_flow_tests.cpp
